package com.appointment.domain;

public enum AppointmentStatus {

    PENDING,
    CONFIRMED,
    CANCELLED

}