package com.appointment.domain;

public enum AppointmentType {

    URGENT,
    FOLLOW_UP,
    ASSESSMENT,
    VIRTUAL,
    IN_PERSON,
    INDIVIDUAL,
    GROUP
}